Ajustes de Presentación y Funcionalidad
- Ancho del thumbnail
- Mensajes de página inicial desde el message.properties
- Boton que recarga el archivo message.properties
- Advertencia de tipo y relación de aspecto del archivo
- Ajustes de Navegación de la colección desde y hacia arbol taxonómico

--- a/src/main/resources/META-INF/messages.properties
+++ b/src/main/resources/META-INF/messages.properties
@@ -1,3 +1,4 @@
+#Mensajes de LOGIN
 LOGIN_ERROR=Ni el Usuario ni la Contraseña pueden estar vacias
 LOGIN_ERROR_LOG=Intento de inicio: Usuario o contraseña vacias
 LOGIN_INVALID_FORMAT_ERROR=Se necesitan un nombre de usuario valido!
@@ -12,3 +13,10 @@ LOGIN_UNKNOWN_ERROR=Credenciales de acceso no validas. Intente nuevamente
 LOGIN_UNKNOWN_ERROR_LOG=Unknown user
 LOGIN_RESTART_PASSWORD=El estado de tu usuario actual es {0} y es necesario que definas una contraseña para poder ingresar. 
 LOGIN_RESTART_PASSWORD_LOG=User {0} must restart password
+
+#Mensajes de la pagina principal
+COLLECTION_PANEL_TEXT=La Universidad Central, lleva a otros niveles la presentación de la colecciones biológicas. En este proyecto nos dedicamos a llevar a la colección entomológica del Centro de Biosistemas de la Universidad Jorge Tadeo Lozano, a una dimensión virtual donde es posible su visualización conociendo todas sus características.
+ABOUT_MODAL_TEXT=Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+TAX_TREE_HEADER_TEXT=Texto para reemplazar
+FAMILIES_COLLECTION_TEXT=Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+FAMILY_DETAIL_TEXT=Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
